feat(Database): create database class, task get endpoint
